--- a/index.html
+++ b/index.html
@@ -221,7 +221,16 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
-           TBA.
+           <ul>
+              <li><b><s>Friday February 28th, 2020</s></b>: Submission deadline</li>
+              <li><b><s>Friday March 27th, 2020</s></b>: Notification of Acceptance</li>
+              <li><b><s>Friday April 10th, 2020</s></b>: Camera-ready paper due </li>
+              <li><b>Sunday May 31st, 2020</b>: ESWC 2020 Workshop day</li>
+            </ul>
+            <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
+                href="https://docs.google.com/document/d/e/2PACX-1vSA-UmH7n1f9bZKCIqp-vJxiC7p0VVY_FEuz2VH2z1t7vDpfHeB3K9jVX4C63Z7sxjGmxIENsemi55G/pub">Read
+                CFP</a>
+              </div>
           </div>
           <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
