--- a/index.html
+++ b/index.html
@@ -206,8 +206,24 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Submission Details</h2>
           <div style="text-align:left">
-            TBA.
+            Papers must comply with the <a href='https://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0'>LNCS</a>
+            style<br>
+            Papers are submitted in PDF format via the workshop’s <a
+              href='https://easychair.org/conferences/?conf=dl4kg'>EasyChair</a> submission pages<br>
+            <br>
+            Submissions can fall in one of the following categories:
+            <ul>
+              <li>Full research papers (8-10 pages)</li>
+              <li>Short research papers (4-6 pages)</li>
+              <li>Position papers (2 pages)</li>
+              <li>Lightning talks (1 page abstract)</li>
+            </ul>
+            </br>Accepted papers (after blind review of at least 3 experts) will be published by <a
+              href='http://ceur-ws.org/'>CEUR–WS</a>. The best paper (according to the reviewers’ rate) will be
+            published within the main conference proceedings.<br><br>
 
+            At least one of the authors of the accepted papers must register for the workshop (pre-conference only
+            option) to be included into the workshop proceedings.
           </div>
           <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
