--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
            <ul>
-              <li><b><s>Friday February 28th, 2020</s></b>: Submission deadline</li>
-              <li><b><s>Friday March 27th, 2020</s></b>: Notification of Acceptance</li>
-              <li><b><s>Friday April 10th, 2020</s></b>: Camera-ready paper due </li>
+              <li><b>Friday February 28th, 2020</b>: Submission deadline</li>
+              <li><b>Friday March 27th, 2020</b>: Notification of Acceptance</li>
+              <li><b>Friday April 10th, 2020</b>: Camera-ready paper due </li>
               <li><b>Sunday May 31st, 2020</b>: ESWC 2020 Workshop day</li>
             </ul>
             <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
