--- a/index.html
+++ b/index.html
@@ -334,12 +334,13 @@
           <h2 class="section-heading text-uppercase">Program Committee (Tentative)</h2>
           <div style="text-align:left">
             <ul>
-              <li>Russa Biswas, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany</li>
-              <li>Danilo Dessi', University of Cagliari, Italy.</li>
+              <li>Russa Biswas, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
+              <li>Danilo Dessi', FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
               <li>Stefan Dietze, L3S Hannover, Germany.</li>
               <li>Mauro Dragoni, Fondazione Bruno Kessler, Italy.</li>
-              <li>Genet Asefa Gesese, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany</li>
+              <li>Genet Asefa Gesese, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
               <li>Pascal Hitzler, Wright State University, USA.</li>
+              <li>Mayank Kejriwal, Information Science Institute, University of Southern California, USA.</li>
               <li>Gerard de Melo, Rutgers University, USA.</li>
               <li>Amedeo Napoli, LORIA, CNRS, France.</li>
               <li>Finn Årup Nielsen, Technical University of Denmark, Denmark.</li>
