--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               <li>Finn Årup Nielsen, Technical University of Denmark, Denmark.</li>
               <li>Achim Rettinger, AIFB-KIT, Germany.</li>
               <li>Petar Ristoski, IBM research, USA.</li>
-              <li>Thiviyan Thanapalasingam, The Open University, UK.</li>
+              <li>Thiviyan Thanapalasingam, University of Amsterdam, The Netherlands.</li>
               <li>Veronika Thost, IBM Research, USA.</li>
               <li>Volker Tresp, Siemens AG, Germany.</li>
             </ul>
