--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
               <li>Thiviyan Thanapalasingam, The Open University, UK.</li>
               <li>Veronika Thost, IBM Research, USA.</li>
               <li>Volker Tresp, Siemens AG, Germany.</li>
+              <li>Lei Zhang, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
             </ul>
           </div>
         </div>
