--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-uppercase">Program Committee (Tentative)</h2>
+          <h2 class="section-heading text-uppercase">Program Committee</h2>
           <div style="text-align:left">
             <ul>
               <li>Russa Biswas, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
