--- a/index.html
+++ b/index.html
@@ -433,21 +433,21 @@
       </div>
     </section>-->
 
-  <!-- Footer 
+  <!-- Footer --> 
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <!--<div class="col-md-4">
             <span class="copyright">Copyright &copy; Your Website 2018</span>
-          </div>
+          </div>-->
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://twitter.com/dl4kg1">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
                 </a>
@@ -456,10 +456,10 @@
                 <a href="#">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-              </li>
+              </li>-->
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
                 <a href="#">Privacy Policy</a>
@@ -468,10 +468,10 @@
                 <a href="#">Terms of Use</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
-    </footer>-->
+    </footer>
 
   <!-- Portfolio Modals -->
 
