--- a/index.html
+++ b/index.html
@@ -359,6 +359,28 @@
     </div>
   </section>
 
+      <section class="py-5">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase">Sponsors</h2>
+        <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 col-sm-5">
+          <div style="text-align: center">
+            <a href="http://www.labex-efl.com/wordpress/">
+              <img class="img-fluid d-block mx-auto" src="img/logos/logo_labex_efl.jpg" alt="">
+            </a>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <!-- Clients 
     <section class="py-5">
