--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           <!--<div class="col-md-4">
             <span class="copyright">Copyright &copy; Your Website 2018</span>
           </div>-->
-          <div class="col-md-4">
+          <div class="col-md-2 col-sm-5">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/dl4kg1">
