--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
            <ul>
-              <li><b>Friday February 28th, 2020</b>: Submission deadline</li>
+              <li><b><s>Friday February 28th, 2020</s> Friday March 6th, 2020</b>: Submission deadline</li>
               <li><b>Friday March 27th, 2020</b>: Notification of Acceptance</li>
               <li><b>Friday April 10th, 2020</b>: Camera-ready paper due </li>
               <li><b>Sunday May 31st, 2020</b>: ESWC 2020 Workshop day</li>
