--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
            <ul>
-              <li><b><s>Friday February 28th, 2020</s> Friday March 6th, 2020</b>: Submission deadline</li>
-              <li><b>Friday March 27th, 2020</b>: Notification of Acceptance</li>
-              <li><b>Friday April 10th, 2020</b>: Camera-ready paper due </li>
-              <li><b>Sunday May 31st, 2020</b>: ESWC 2020 Workshop day</li>
+              <li>Submission deadline: <b><s>Friday February 28th, 2020</s> Friday March 6th, 2020</b></li>
+              <li>Notification of Acceptance: <b>Friday March 27th, 2020</b></li>
+              <li>Camera-ready paper due: <b>Friday April 10th, 2020</b></li>
+              <li>ESWC 2020 Workshop day: <b>Sunday May 31st, 2020</b></li>
             </ul>
             <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
                 href="https://docs.google.com/document/d/e/2PACX-1vSA-UmH7n1f9bZKCIqp-vJxiC7p0VVY_FEuz2VH2z1t7vDpfHeB3K9jVX4C63Z7sxjGmxIENsemi55G/pub">Read
