--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
            <ul>
-              <li>Submission deadline: <b><s>Friday February 28th, 2020</s> Friday March 6th, 2020</b></li>
-              <li>Notification of Acceptance: <b>Friday March 27th, 2020</b></li>
-              <li>Camera-ready paper due: <b>Friday April 10th, 2020</b></li>
+              <li>Submission deadline: <b><s>Friday February 28th, 2020</s> <s>Friday March 6th, 2020</s> Friday March 13th, 2020</b></li>
+              <li>Notification of Acceptance: <b><s>Friday March 27th, 2020</s> Friday April 10th, 2020</b></li>
+              <li>Camera-ready paper due: <b><s>Friday April 10th, 2020</s> Friday April 20th, 2020</b></li>
               <li>ESWC 2020 Workshop day: <b>Sunday May 31st, 2020</b></li>
             </ul>
             <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
