--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-sm-4">
             <div class="team-member">
             </div>
-          </div> TBA.
+          </div> 
 <div class="col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/*.png" alt="">
