--- a/index.html
+++ b/index.html
@@ -199,16 +199,62 @@
 
   </section>
   <!-- About -->
-  <section id="program">
+    <section id="program">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Workshop Program and Proceedings</h2>
-          TBA.
+          <h3 class="section-subheading text-muted">Accepted Papers.</h3>
+          <ul style="text-align:justify">
 
+
+          	<li><a href="papers/paper1.pdf">Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</a>Ahmad Al Taweel and Heiko Paulheim</li>
+			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>Qingxia Liu, Gong Cheng and Yuzhong Qu</li>
+			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
+			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>Riley Capshaw, Marco Kuhlmann and Eva Blomqvist</li>
+			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>Genet Asefa Gesese, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper8.pdf">Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</a>Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann</li>
+          </ul>
+
+
+          <h3 class="section-subheading text-muted">Workshop Program.</h3>
+
+          10:00 - 10:10 Welcome<br /><br />
+          <hr>
+          10:10 - 11:00 Invited Talk<br /><br />
+          <hr>
+          11:00 - 11:30 Coffee Break<br /><br />
+          <hr>
+          11:30 - 13:00 <br />
+          <ul style="text-align:justify">
+          	<li>11:30 - 12:00 Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann. Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</li>
+			<li>12:00 - 12:30	Ahmad Al Taweel and Heiko Paulheim. Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</li>
+			<li>12:30 - 12:55	Riley Capshaw, Marco Kuhlmann and Eva Blomqvist. Probing a Semantic Dependency Parser for Translational Relation Embeddings</li>
+          </ul>
+          <hr>
+          13:00 - 14:00 LUNCH BREAK <br /><br />
+          <hr><br />
+          14:00 - 15:30 <br />
+          <ul style="text-align:justify">
+            <li>14:00 - 14:25	Genet Asefa Gesese, Mehwish Alam and Harald Sack. Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</li>
+			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization</li>
+			<li>14:50 - 15:15	Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack. Entity Type Prediction in Knowledge Graphs using Embeddings</li>
+			<li>15:15 - 15:30	LIGHTNING TALK!	</li>
+          </ul>
+          <hr>
+          15:30 - 16:00 COFFEE BREAK <br /><br />
+          <hr>
+          16:00 - 16:45 <br />
+          <ul style="text-align:justify">
+           <li>16:00	16:30	Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae. Conditional Constraints for Knowledge Graph Embeddings</li>
+		   <li>16:30	16:45	LIGHTNING TALK!	</li>
+		   <li>16:45	17:00	Closing	</li>
+          </ul>
         </div>
       </div>
   </section>
+
 
   <!-- Portfolio Grid -->
   <section class="bg-light" id="submission">
