--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <div class="col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/*.png" alt="">
-              <h4>Michalis Vazirgiannis</h4>
+              <h4><a href="http://www.lix.polytechnique.fr/Labo/Michalis.Vazirgiannis/">Michalis Vazirgiannis</a></h4>
               <p class="text-muted">Ecole Polytechnique, France</p>
             </div>
           </div>
@@ -208,13 +208,13 @@
           <ul style="text-align:justify">
 
 
-          	<li><a href="papers/paper1.pdf">Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</a>Ahmad Al Taweel and Heiko Paulheim</li>
-			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>Qingxia Liu, Gong Cheng and Yuzhong Qu</li>
-			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
-			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack</li>
-			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>Riley Capshaw, Marco Kuhlmann and Eva Blomqvist</li>
-			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>Genet Asefa Gesese, Mehwish Alam and Harald Sack</li>
-			<li><a href="papers/paper8.pdf">Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</a>Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann</li>
+          	<li><a href="papers/paper1.pdf">Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</a>. Ahmad Al Taweel and Heiko Paulheim</li>
+			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>. Qingxia Liu, Gong Cheng and Yuzhong Qu</li>
+			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>. Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
+			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>. Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>. Riley Capshaw, Marco Kuhlmann and Eva Blomqvist</li>
+			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>. Genet Asefa Gesese, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper8.pdf">Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</a>. Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann</li>
           </ul>
 
 
@@ -222,20 +222,22 @@
 
           10:00 - 10:10 Welcome<br /><br />
           <hr>
-          10:10 - 11:00 Invited Talk<br /><br />
+          10:10 - 11:00 Invited Talk by <a href="http://www.lix.polytechnique.fr/Labo/Michalis.Vazirgiannis/">Michalis Vazirgiannis</a><br /><br />
           <hr>
-          11:00 - 11:30 Coffee Break<br /><br />
+          <b>11:00 - 11:30 Coffee Break <b><br />
           <hr>
-          11:30 - 13:00 <br />
+          <b>Session 1: 11:30 - 13:00 </b><br />
+		  <hr>
           <ul style="text-align:justify">
           	<li>11:30 - 12:00 Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann. Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</li>
 			<li>12:00 - 12:30	Ahmad Al Taweel and Heiko Paulheim. Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</li>
 			<li>12:30 - 12:55	Riley Capshaw, Marco Kuhlmann and Eva Blomqvist. Probing a Semantic Dependency Parser for Translational Relation Embeddings</li>
           </ul>
           <hr>
-          13:00 - 14:00 LUNCH BREAK <br /><br />
+          <b>13:00 - 14:00 LUNCH BREAK </b><br />
           <hr><br />
-          14:00 - 15:30 <br />
+          <b>Session 2: 14:00 - 15:30 </b> <br />
+		  <hr>
           <ul style="text-align:justify">
             <li>14:00 - 14:25	Genet Asefa Gesese, Mehwish Alam and Harald Sack. Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</li>
 			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization</li>
@@ -243,9 +245,10 @@
 			<li>15:15 - 15:30	LIGHTNING TALK!	</li>
           </ul>
           <hr>
-          15:30 - 16:00 COFFEE BREAK <br /><br />
+          <b>15:30 - 16:00 COFFEE BREAK</b> <br />
           <hr>
-          16:00 - 16:45 <br />
+          <b>Session 3: 16:00 - 17:00<b> <br />
+		  <hr>
           <ul style="text-align:justify">
            <li>16:00	16:30	Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae. Conditional Constraints for Knowledge Graph Embeddings</li>
 		   <li>16:30	16:45	LIGHTNING TALK!	</li>
