--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
 
           <h3 class="section-subheading text-muted">Workshop Program.</h3>
 
-          10:00 - 10:10 Welcome<br /><br />
+          <b>10:00 - 10:10 Welcome </b><br />
           <hr>
+		<br />
           10:10 - 11:00 Invited Talk by <a href="http://www.lix.polytechnique.fr/Labo/Michalis.Vazirgiannis/">Michalis Vazirgiannis</a><br /><br />
           <hr>
           <b>11:00 - 11:30 Coffee Break <b><br />
