--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<br />
           10:10 - 11:00 Invited Talk by <a href="http://www.lix.polytechnique.fr/Labo/Michalis.Vazirgiannis/">Michalis Vazirgiannis</a><br /><br />
           <hr>
-          <b>11:00 - 11:30 Coffee Break <b><br />
+          <b>11:00 - 11:30 Coffee Break </b><br />
           <hr>
           <b>Session 1: 11:30 - 13:00 </b><br />
 		  <hr>
@@ -248,7 +248,7 @@
           <hr>
           <b>15:30 - 16:00 COFFEE BREAK</b> <br />
           <hr>
-          <b>Session 3: 16:00 - 17:00<b> <br />
+          <b>Session 3: 16:00 - 17:00</b> <br />
 		  <hr>
           <ul style="text-align:justify">
            <li>16:00	16:30	Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae. Conditional Constraints for Knowledge Graph Embeddings</li>
