--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </ul>
 
 
-          <h3 class="section-subheading text-muted">Workshop Program.</h3>
+          <h3 class="section-subheading">Workshop Program. (All times are in CEST.)</h3>
 
           <b>10:00 - 10:10 Welcome </b><br />
           <hr>
