--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               <li>Submission deadline: <b><s>Friday February 28th, 2020</s> <s>Friday March 6th, 2020</s> Friday March 13th, 2020</b></li>
               <li>Notification of Acceptance: <b><s>Friday March 27th, 2020</s> Friday April 10th, 2020</b></li>
               <li>Camera-ready paper due: <b><s>Friday April 10th, 2020</s> Monday April 20th, 2020</b></li>
-              <li>ESWC 2020 Workshop day: <b>Sunday May 31st, 2020</b></li>
+              <li>ESWC 2020 Workshop day: <b>Tuesday June 2nd, 2020</b></li>
             </ul>
             <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
                 href="https://docs.google.com/document/d/e/2PACX-1vSA-UmH7n1f9bZKCIqp-vJxiC7p0VVY_FEuz2VH2z1t7vDpfHeB3K9jVX4C63Z7sxjGmxIENsemi55G/pub">Read
