--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div> 
 <div class="col-sm-12">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/*.png" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/vazirgiannis.jpg" alt="">
               <h4><a href="http://www.lix.polytechnique.fr/Labo/Michalis.Vazirgiannis/">Michalis Vazirgiannis</a></h4>
               <p class="text-muted">Ecole Polytechnique, France</p>
             </div>
