--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <li>14:00 - 14:25	Genet Asefa Gesese, Mehwish Alam and Harald Sack. Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</li>
 			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization</li>
 			<li>14:50 - 15:15	Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack. Entity Type Prediction in Knowledge Graphs using Embeddings</li>
-			<li>15:15 - 15:30	LIGHTNING TALK!	</li>
+			<!--<li>15:15 - 15:30	LIGHTNING TALK!	</li>-->
           </ul>
           <hr>
           <b>15:30 - 16:00 COFFEE BREAK</b> <br />
@@ -253,7 +253,7 @@
 		  <hr>
           <ul style="text-align:justify">
            <li>16:00	16:30	Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae. Conditional Constraints for Knowledge Graph Embeddings</li>
-		   <li>16:30	16:45	LIGHTNING TALK!	</li>
+		   <li>16:30	16:45	Discussion and Feedback	</li>
 		   <li>16:45	17:00	Closing	</li>
           </ul>
         </div>
