--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>. Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
 			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>. Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack</li>
 			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>. Riley Capshaw, Marco Kuhlmann and Eva Blomqvist (<a href="slides/DL4KG2020_RileyCapshaw_Probing_A_Semantic_Dependency_Parser.pdf">slides</a>)</li>
-			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>. Genet Asefa Gesese, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>. Genet Asefa Gesese, Mehwish Alam and Harald Sack (<a href="slides/ESWC2020-DL4KG-Genet.pdf">slides</a>)</li>
 			<li><a href="papers/paper8.pdf">Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</a>. Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann (<a href="slides/ADNS-DL5KG.pdf">slides</a>)</li>
           </ul>
 
