--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		  <hr>
           <ul style="text-align:justify">
             <li>14:00 - 14:25	Genet Asefa Gesese, Mehwish Alam and Harald Sack. Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</li>
-			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization</li>
+			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization ((<a href="slides/ESWC20-DL4KG-DeepLENS_20200602_pub.pdf"> slides</a>))</li>
 			<li>14:50 - 15:15	Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack. Entity Type Prediction in Knowledge Graphs using Embeddings</li>
 			<!--<li>15:15 - 15:30	LIGHTNING TALK!	</li>-->
           </ul>
