--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 
 
           	<li><a href="papers/paper1.pdf">Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</a>. Ahmad Al Taweel and Heiko Paulheim  (<a href="slides/dl4kg_2020_heiko_paulheim.pdf">slides</a>)</li>
-			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>. Qingxia Liu, Gong Cheng and Yuzhong Qu</li>
+			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>. Qingxia Liu, Gong Cheng and Yuzhong Qu (<a href="slides/ESWC20-DL4KG-DeepLENS_20200602_pub.pdf"> slides</a>)</li>
 			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>. Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
-			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>. Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack</li>
+			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>. Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack  (<a href="slides/ESWC2020_DL4KG_Russa_slides.pdf">slides </a>)</li>
 			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>. Riley Capshaw, Marco Kuhlmann and Eva Blomqvist (<a href="slides/DL4KG2020_RileyCapshaw_Probing_A_Semantic_Dependency_Parser.pdf">slides</a>)</li>
 			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>. Genet Asefa Gesese, Mehwish Alam and Harald Sack (<a href="slides/ESWC2020-DL4KG-Genet.pdf">slides</a>)</li>
 			<li><a href="papers/paper8.pdf">Affinity Dependent Negative Sampling for Knowledge Graph Embeddings</a>. Mirza Mohtashim Alam, Hajira Jabeen, Mehdi Ali, Karishma Mohiuddin and Jens Lehmann (<a href="slides/ADNS-DL5KG.pdf">slides</a>)</li>
@@ -242,7 +242,7 @@
 		  <hr>
           <ul style="text-align:justify">
             <li>14:00 - 14:25	Genet Asefa Gesese, Mehwish Alam and Harald Sack. Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</li>
-			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization ((<a href="slides/ESWC20-DL4KG-DeepLENS_20200602_pub.pdf"> slides</a>))</li>
+			<li>14:25 - 14:50	Qingxia Liu, Gong Cheng and Yuzhong Qu. DeepLENS: Deep Learning for Entity Summarization</li>
 			<li>14:50 - 15:15	Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack. Entity Type Prediction in Knowledge Graphs using Embeddings</li>
 			<!--<li>15:15 - 15:30	LIGHTNING TALK!	</li>-->
           </ul>
