--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
           	<li><a href="papers/paper1.pdf">Towards Exploiting Implicit Human Feedback for Improving RDF2vec Embeddings</a>. Ahmad Al Taweel and Heiko Paulheim  (<a href="slides/dl4kg_2020_heiko_paulheim.pdf">slides</a>)</li>
 			<li><a href="papers/paper2.pdf">DeepLENS: Deep Learning for Entity Summarization</a>. Qingxia Liu, Gong Cheng and Yuzhong Qu (<a href="slides/ESWC20-DL4KG-DeepLENS_20200602_pub.pdf"> slides</a>)</li>
-			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>. Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae</li>
+			<li><a href="papers/paper3.pdf">Conditional Constraints for Knowledge Graph Embeddings</a>. Michael Weyns, Pieter Bonte, Bram Steenwinckel, Filip De Turck and Femke Ongenae  (<a href="slides/Conditional_Constraints_for_KG_Embeddings.pdf"> slides</a>)</li>
 			<li><a href="papers/paper5.pdf">Entity Type Prediction in Knowledge Graphs using Embeddings</a>. Russa Biswas, Radina Sofronova, Mehwish Alam and Harald Sack  (<a href="slides/ESWC2020_DL4KG_Russa_slides.pdf">slides </a>)</li>
 			<li><a href="papers/paper6.pdf">Probing a Semantic Dependency Parser for Translational Relation Embeddings</a>. Riley Capshaw, Marco Kuhlmann and Eva Blomqvist (<a href="slides/DL4KG2020_RileyCapshaw_Probing_A_Semantic_Dependency_Parser.pdf">slides</a>)</li>
 			<li><a href="papers/paper7.pdf">Semantic Entity Enrichment by leveraging Multi-lingual Descriptions for Link Prediction</a>. Genet Asefa Gesese, Mehwish Alam and Harald Sack (<a href="slides/ESWC2020-DL4KG-Genet.pdf">slides</a>)</li>
