--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <p class="text-muted">Ecole Polytechnique, France</p>
             </div>
           </div>
-          <h3>Title</h3>Message Passing Attention Networks for Document Understanding<br /><br />
+          <h3>Title</h3>Message Passing Attention Networks for Document Understanding (<a href="slides/presentation.pdf">slides</a>)<br /><br />
           <h3>Abstract</h3>
           <p style="text-align:justify">Graph neural networks have recently emerged as a very effective framework for processing graph-structured data. These models have achieved state-of-the-art performance in many tasks. Most graph neural networks can be described in terms of message passing, vertex update, and readout functions. We investigate the potential of GNNs in the area of NLP.  We represent documents as word co-occurrence networks and propose an application of the message passing framework to NLP, the Message Passing Attention network for Document understanding (MPAD). We also propose several hierarchical variants of MPAD. Experiments conducted on standard text classification datasets show that our architectures are competitive with the state-of-the-art approaches. Ablation studies reveal further insights about the impact of the different components on performance. </p> <br /><br />
           <h3>Short Biography</h3>
