--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Workshop at <a href="https://2020.eswc-conferences.org/">ESWC 2020</a> on</div>
         <div class="intro-heading text-uppercase">Deep Learning for Knowledge Graphs</div>
-	       <div class="intro-lead-in">Proceedings are available on-line <a href="http://ceur-ws.org/Vol-2635/">here</a> on</div>
+	       <div class="intro-lead-in">Proceedings are available on-line <a href="http://ceur-ws.org/Vol-2635/">here</a></div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#home">More Details!</a>
       </div>
     </div>
